Fixed sub-heading alignment

--- a/hugo/themes/hello/assets/scss/_main.scss
+++ b/hugo/themes/hello/assets/scss/_main.scss
@@ -50,6 +50,14 @@ body {
   margin-left: 0;
   margin-right: 0;
   margin-bottom: -15px;
+  display: inline-block;
+
+}
+
+.title-centre {
+  width: 100%;
+  margin: auto;
+  text-align: center;
 }
 
 .site-subtitle > h2 {
@@ -59,6 +67,7 @@ body {
   text-transform: uppercase;
   letter-spacing: 1.5px;
   margin-top: 0;
+  display: inline-block;
 }
 
 h1, h2, h3, h4, h5, h6 {
